add school projects

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     </div>
     
     <div class="header2">
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-spotify"></i>
-            <i class="fab fa-telegram-plane"></i>
-            <i class="fab fa-linkedin-in"></i>
-            <i class="fab fa-github"></i>
+            <i class="fab fa-twitter"> <a href="https://twitter.com/clovisDropout" target="twitter"></a> </i>
+            <i class="fab fa-spotify"> </i>
+            <i class="fab fa-telegram-plane"> </i>
+            <i class="fab fa-linkedin-in"> </i>
+            <i class="fab fa-github"> </i>
     </div>
 
     <div class="box">
 
-         <h3> Matteo</h3>
+         <h3>Matteo</h3>
          <hr class="hr1">
          <h5 class="info1">19 y/o</h5>
          <h5 class="info2">digital school</h5>
@@ -37,9 +37,27 @@
     </div>
 
     <div class="schoolprojects">
+        <h4>school projects</h4>
+        <hr class="hr2">
 
+     
 
     </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <script src="index.js"></script>
 </body>
 </html>
